--- a/vignettes/benchmarks.Rmd
+++ b/vignettes/benchmarks.Rmd
@@ -14,6 +14,9 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 
+# Set a flag to determine if this is being run on CRAN
+on_cran <- !identical(Sys.getenv("NOT_CRAN"), "true")
+
 # NOTE:
 # To re-run the benchmarks, run the "benchmark" workflow on GitHub
 ```
@@ -41,8 +44,19 @@ then update it to the second and third snapshot. Finally, the table is deleted.
 The performance of this benchmark function is timed with the `{microbenchmark}` package using 10 replicates.
 All benchmarks are run on the same machine.
 
-The results of the benchmark are shown graphically below (mean and standard deviation), where we compare the current
-development version of `SCDB` with the current CRAN version.
+```{r benchmark context, results = "asis", include = FALSE}
+if (on_cran) {
+  cat(
+    "The results of the benchmark are shown graphically below (mean and standard deviation), where measure the",
+    "performance of `SCDB`."
+  )
+} else {
+  cat(
+    "The results of the benchmark are shown graphically below (mean and standard deviation), where we compare the",
+    "current development version of `SCDB` with the current CRAN version."
+  )
+}
+```
 
 ```{r benchmark_preprocessing, echo = FALSE, eval = requireNamespace("here")}
 benchmark_location <- c(
@@ -52,12 +66,13 @@ benchmark_location <- c(
   purrr::discard(~ identical(., "")) %>%
   purrr::pluck(1)
 
-benchmarks <- readRDS(benchmark_location)
+benchmarks <- readRDS(benchmark_location) %>%
+  dplyr::mutate("version" = as.character(.data$version))
 
 # Determine if the SHA is on main
 sha <- benchmarks %>%
-  dplyr::distinct(version) %>%
-  dplyr::filter(!(version %in% c("CRAN", "main", "branch"))) %>%
+  dplyr::distinct(.data$version) %>%
+  dplyr::filter(!startsWith(.data$version, "SCDB"), .data$version != "main") %>%
   dplyr::pull("version")
 
 # Check local git history
@@ -71,14 +86,17 @@ on_main <- tryCatch({
   return(identical(Sys.getenv("CI"), "true"))
 })
 
-# If the SHA has been merged, use as the "main" version and remove the other,
-# older, main version
-if (on_main) {
+# If we are on CRAN, use the newest benchmark (version = sha)
+# This benchmark is then labelled with the newest version number of SCDB (the one we just deployed to CRAN)
+if (on_cran) {
+  benchmarks <- benchmarks %>%
+    dplyr::filter(.data$version == !!sha) %>%
+    dplyr::mutate("version" = paste0("SCDB v", packageVersion("SCDB")))
+} else if (on_main) {
+  # If the SHA has been merged, use as the "main" version and remove the other, older, main version
   benchmarks <- benchmarks %>%
     dplyr::filter(.data$version != "main") %>%
-    dplyr::mutate(
-      "version" = dplyr::if_else(.data$version == "CRAN", "CRAN", "development")
-    )
+    dplyr::mutate("version" = dplyr::if_else(.data$version == sha, "development", .data$version))
 }
 
 # Mean and standard deviation (see ggplot2::mean_se())
